# Data-Modeling-Project

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
01_data_preparation/: README.md
01_data_preparation/data/: const_2475.json  const_2483.json  const_2485.json  const_2491a.json  const_2492.json  const_2495.json  const_2502.json  const_2515.json  const_2518.json  const_2521.json  const_2534a.json  const_2534b.json  const_2535a.json  const_2538.json  const_2539.json  const_2540.json  const_2548.json  const_2554a.json  const_2554b.json
01_data_preparation/notebook/: create_clean_dataset.ipynb  data_preprocessing.ipynb
02_data_preprocessing/notebooks/: data_preprocessing.ipynb
02_data_visualization/: README.md  data_visualization.md
02_data_visualization/notebooks/: advance_eda.ipynb  basic_eda.ipynb  data_visualization.ipynb
03_data_preparation/01_preprocessing/: check_category_nullity.py  data_prep.py  parser_2495.py  plot_chapter_counts.py  process.md  remove_gazette_header.py  seperator.py  timeline.md
03_data_preparation/02_basic_information/: chapter_sequence_viz.ipynb  chapter_sequence_viz_d1.ipynb  chapter_sequence_viz_d2.ipynb  chapter_sequence_viz_d3 copy.ipynb  chapter_sequence_viz_d4_2490a_fix.ipynb  chapter_sequence_viz_d5_2492.ipynb  information.ipynb
03_data_preparation/output/: sections_v2.csv  sections_v2_clean.csv
DataPrep/data/: const_2482.json  const_2489.json  const_2490a.json  const_2490b.json  const_2491b.json  const_2511.json  const_2517.json  const_2519.json  const_2520.json  (+10 more)
data/: exp_topic_assignments.csv
(+106 files in other folders)
