[project]
name = "data-modeling-project"
version = "0.1.0"
description = "A simple data modeling project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pythainlp>=5.3.4",
    "attacut>=1.0.6",
    "wordcloud>=1.9.6",
]


[tool.uv]
default-groups = ["dev", "notebook"]

[dependency-groups]
dev = ["ruff>=0.14.13", "ruff-lsp>=0.0.62"]
notebook = [
    "ipykernel",
    "ipywidgets",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "nbconvert>=7.16.6",
    "nbqa>=1.9.1",
]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"] # Allow imports not at top of file in notebooks

[tool.nbqa]
addopts = "--ruff"
